fix: concurrency texture loading issues